# peak-content

./: .gitignore  README.md  commands_summary.txt  pyproject.toml  trend.plan.md
.jupyter/: migrated
db/: schema.sql
notebooks/: eda_best_time.ipynb
reports/: data_audit.md  final_report.md  model_eval.md  model_metrics.json  predictions.csv  trend_metrics.json
src/data/: load_to_db.py
src/etl/: clean_tiktok.py  utils.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py
src/visualization/: dashboard.py
